Ajusted DuckyType Package.json for Azure

--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "lint": "next lint",
     "lint-watch": "nodemon --watch . --exec next lint",
     "cypress:open": "cypress:open",
-    "export": "next build && next export",
-    "predeploy": "npm run export",
-    "deploy": "gh-pages -d out --nojekyll"
+    "predeploy": "npm run build",
+    "deploy": "echo 'Deploy to Azure Web App is handled by GitHub Actions'"
   },
   "dependencies": {
     "jwt-decode": "^4.0.0",
@@ -29,7 +28,6 @@
     "concurrently": "^9.1.2",
     "cypress": "^14.2.1",
     "eslint": "^9.23.0",
-    "eslint-config-next": "15.2.4",
-    "gh-pages": "^6.3.0"
+    "eslint-config-next": "15.2.4"
   }
 }
