--- a/.github/workflows/main_fe-duckytype.yml
+++ b/.github/workflows/main_fe-duckytype.yml
@@ -60,9 +60,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B8E7E876C5A64E18B6C993D125C28174 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B8AB217090EF4EE4B7A5397734B3296C }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FA7D4634DF8E4D2FA23141788F862841 }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
